syntax = "proto2";
package sample;

option java_package = "com.javalive09.sample.protoc";
option java_outer_classname = "Demo"; 

message Person {
  required string name = 1;
  required int32 id = 2;
  optional string email = 3;
  //optional int32 age = 5[default=20];

  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message PhoneNumber {
    required string number = 1;
    optional PhoneType type = 2 [default = HOME];
  }

  repeated PhoneNumber phone = 4;

//  extensions 11 to 15;

//  extend Person {
//    optional string info = 11[default="xxx"];
//    optional string weight = 12[default="yyy"];
//  }

}

message AddressBook {
  repeated Person person = 1;
}


